# esp32-audio-delay

./: .gitignore  CMakeLists.txt  COPYRIGHT  HARDWARE_MIGRATION_NOTES.md  HARDWARE_SPECIFICATION.md  LICENSE  README.md  build_and_flash.sh  sdkconfig.defaults  software_requirements.md  test_project.md
main/: CMakeLists.txt  audio_delay.c  ec11_encoder.c  es8388_driver.c  main.c  oled_display.c  settings_manager.c  ui_manager.c
main/include/: audio_delay.h  ec11_encoder.h  es8388_driver.h  oled_display.h  settings_manager.h  ui_manager.h
